@@ -1,3 +1,11 @@
+2007-02-06  Benno Schulenberg  <bensberg-at-justemail-dot-net>
+
+	* unichrome/via_driver.c:
+
+	Try CR39 when CR34 says zero during memory detection on
+	the CLE266.  Idea from Luc Verhaegen, patch by Mark Huijgen
+	<mark-dot-sf-dot-net-at-huijgen-dot-tk>.
+
 2007-01-20  Benno Schulenberg  <bensberg-at-justemail-dot-net>
 
 	* ChangeLog
